<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".CreditCardDetailsActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:text="@string/details_activity_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:src="@drawable/back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCard"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        android:background="@drawable/paycell_dark"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/textViewCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/card_number" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/textViewCvcNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/textViewCardNumber"
            app:layout_constraintTop_toBottomOf="@id/textViewCardNumber"
            tools:text="@string/cvc" />

        <TextView
            android:id="@+id/textViewValidDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/textViewCvcNumber"
            app:layout_constraintTop_toBottomOf="@id/textViewCvcNumber"
            tools:text="@string/valid_thru" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@id/layoutCard"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/layoutCard"
        app:layout_constraintTop_toBottomOf="@id/layoutCard">

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="creditCardNumber"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/ic_card_number"
            android:drawablePadding="10dp"
            android:hint="@string/edit_card_number"
            android:inputType="number"
            android:maxLength="19"
            android:padding="8dp" />

        <EditText
            android:id="@+id/editTextCvcNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="creditCardSecurityCode"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/ic_card_cvc"
            android:drawablePadding="10dp"
            android:hint="@string/edit_cvc_number"
            android:inputType="number"
            android:maxLength="3"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextValidMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:autofillHints="creditCardExpirationDate"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_valid_date"
                android:drawablePadding="10dp"
                android:hint="@string/edit_valid_month"
                android:inputType="number"
                android:maxLength="2"
                android:padding="8dp" />

            <EditText
                android:id="@+id/editTextValidYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:autofillHints="creditCardExpirationDate"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_valid_date"
                android:drawablePadding="10dp"
                android:hint="@string/edit_valid_year"
                android:inputType="number"
                android:maxLength="2"
                android:padding="8dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/MyButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/update_card"
        app:layout_constraintEnd_toEndOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="@id/linear_layout"
        app:layout_constraintTop_toBottomOf="@id/linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
